상품 저장 테스트 코드 작성