@@ -1,8 +1,9 @@
 package com.example.hexagonalarchitecture.product.shared.mapper;
 
-import com.example.hexagonalarchitecture.product.adapter.in.web.dto.CreateProductRequestDto;
+import com.example.hexagonalarchitecture.product.adapter.in.web.dto.ProductSaveDto;
 import com.example.hexagonalarchitecture.product.adapter.out.persistence.ProductEntity;
 import com.example.hexagonalarchitecture.product.domain.Product;
+import com.example.hexagonalarchitecture.product.domain.ProductSave;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -11,55 +12,43 @@ import java.util.stream.Collectors;
 @Component
 public class ProductMapperImpl implements ProductMapper {
     @Override
-    public ProductEntity toEntity(Product domain) {
-        return ProductEntity.builder()
-                .productName(domain.getProductName())
-                .build();
-    }
-
-    @Override
-    public Product toDomainWithId(ProductEntity entity) {
-        return Product.builder()
-                .id(entity.getId())
-                .productName(entity.getProductName())
-                .createdDate(entity.getCreatedDate())
-                .build();
-    }
-
-    @Override
-    public List<Product> toDomainsWithId(List<ProductEntity> entities) {
-        return entities.stream()
-                .map(entity -> Product.builder()
-                        .id(entity.getId())
-                        .productName(entity.getProductName())
-                        .createdDate(entity.getCreatedDate()).build()
+    public List<ProductSave> fromStrings(List<String> names) {
+        return names.stream()
+                .map(name -> ProductSave.builder()
+                        .name(name)
+                        .build()
                 )
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public Product toDomain(CreateProductRequestDto dto) {
-        return Product.builder()
-                .productName(dto.getProductName())
-                .build();
+    public List<Product> fromEntities(List<ProductEntity> productEntities) {
+        return productEntities.stream()
+                .map(productEntity -> Product.builder()
+                        .name(productEntity.getName())
+                        .build()
+                )
+                .toList();
     }
 
     @Override
-    public List<Product> toDomainsFromDto(List<CreateProductRequestDto> dtos) {
-        return dtos.stream()
-                .map(dto -> Product.builder().productName(dto.getProductName()).build())
-                .collect(Collectors.toList());
+    public List<ProductEntity> fromProductSaves(List<ProductSave> productSaves) {
+        return productSaves.stream()
+                .map(productSave -> ProductEntity.builder()
+                        .name(productSave.getName())
+                        .build()
+                )
+                .toList();
     }
 
     @Override
-    public List<ProductEntity> toEntity(List<Product> products) {
+    public List<ProductEntity> fromProducts(List<Product> products) {
         return products.stream()
                 .map(product -> ProductEntity.builder()
                         .id(product.getId())
-                        .productName(product.getProductName())
-                        .createdDate(product.getCreatedDate())
+                        .name(product.getName())
                         .build()
                 )
-                .collect(Collectors.toList());
+                .toList();
     }
 }
